; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_set_timer_tc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_set_timer_tc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstp_port = type { i32, %struct.TYPE_2__, i32, i64, %struct.bstp_state* }
%struct.TYPE_2__ = type { i64 }
%struct.bstp_state = type { i64, i64 }

@BSTP_TICK_VAL = common dso_local global i64 0, align 8
@BSTP_PORT_NEWINFO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bstp_port*)* @bstp_set_timer_tc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bstp_set_timer_tc(%struct.bstp_port* %0) #0 {
  %2 = alloca %struct.bstp_port*, align 8
  %3 = alloca %struct.bstp_state*, align 8
  store %struct.bstp_port* %0, %struct.bstp_port** %2, align 8
  %4 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %5 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %4, i32 0, i32 4
  %6 = load %struct.bstp_state*, %struct.bstp_state** %5, align 8
  store %struct.bstp_state* %6, %struct.bstp_state** %3, align 8
  %7 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %8 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  br label %42

13:                                               ; preds = %1
  %14 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %15 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  switch i32 %16, label %42 [
    i32 129, label %17
    i32 128, label %31
  ]

17:                                               ; preds = %13
  %18 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %19 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %18, i32 0, i32 1
  %20 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %21 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %20, i32 0, i32 3
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @BSTP_TICK_VAL, align 8
  %24 = add nsw i64 %22, %23
  %25 = call i32 @bstp_timer_start(%struct.TYPE_2__* %19, i64 %24)
  %26 = load i32, i32* @BSTP_PORT_NEWINFO, align 4
  %27 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %28 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 8
  %30 = or i32 %29, %26
  store i32 %30, i32* %28, align 8
  br label %42

31:                                               ; preds = %13
  %32 = load %struct.bstp_port*, %struct.bstp_port** %2, align 8
  %33 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %32, i32 0, i32 1
  %34 = load %struct.bstp_state*, %struct.bstp_state** %3, align 8
  %35 = getelementptr inbounds %struct.bstp_state, %struct.bstp_state* %34, i32 0, i32 1
  %36 = load i64, i64* %35, align 8
  %37 = load %struct.bstp_state*, %struct.bstp_state** %3, align 8
  %38 = getelementptr inbounds %struct.bstp_state, %struct.bstp_state* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = add nsw i64 %36, %39
  %41 = call i32 @bstp_timer_start(%struct.TYPE_2__* %33, i64 %40)
  br label %42

42:                                               ; preds = %12, %13, %31, %17
  ret void
}

declare dso_local i32 @bstp_timer_start(%struct.TYPE_2__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
